<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.choi.apartmentgardener.MainActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:paddingBottom="10dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apartment Gardener"
            android:textSize="30dp"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:paddingBottom="25dp"
            android:textColor="@color/button"/>

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_str" />

        <EditText
            android:id="@+id/pwdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_str"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/button"
            android:onClick="login"
            android:text="@string/login_str"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/button"
            android:text="@string/register_str"
            android:textColor="@color/buttonText"
            android:onClick="register"/>

        <Button
            android:id="@+id/guestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_str"
            android:background="@color/button"
            android:textColor="@color/buttonText"
            android:onClick="continueAsGuest"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
